--- a/src/main/resources/templates/system/user/add.html
+++ b/src/main/resources/templates/system/user/add.html
@@ -28,7 +28,7 @@
 			<div class="form-group">
 				<label class="col-sm-3 control-label">密码：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="password" name="password" id="password" th:value="${@configService.selectConfigByKey('sys.user.initPassword')}">
+					<input class="form-control" type="password" name="password" id="password" th:value="${@configComponentService.selectConfigByKey('sys.user.initPassword')}">
 				</div>
 			</div>
 			<div class="form-group">
@@ -40,7 +40,7 @@
 			<div class="form-group">
 				<label class="col-sm-3 control-label">手机：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" name="phonenumber" id="phonenumber">
+					<input class="form-control" type="text" name="phoneNumber" id="phoneNumber">
 				</div>
 			</div>
 			<div class="form-group">
@@ -67,7 +67,7 @@
 				<label class="col-sm-3 control-label">岗位：</label>
 				<div class="col-sm-8">
 					<select id="post" name="post" class="form-control select2-hidden-accessible" multiple="">
-						<option th:each="post:${posts}" th:value="${post.postId}" th:text="${post.postName}"></option>
+						<option th:each="post:${posts}" th:value="${post.id}" th:text="${post.postName}"></option>
 					</select>
 					
 				</div>
@@ -76,7 +76,7 @@
 				<label class="col-sm-3 control-label">角色：</label>
 				<div class="col-sm-8">
 					<label th:each="role:${roles}" class="checkbox-inline i-checks">
-						<input name="role" type="checkbox" th:value="${role.roleId}" th:text="${role.roleName}">
+						<input name="role" type="checkbox" th:value="${role.id}" th:text="${role.roleName}">
 					</label>
 				</div>
 			</div>
@@ -143,7 +143,7 @@
                         }
                     }
         		},
-        		phonenumber:{
+        		phoneNumber:{
         			required:true,
         			isPhone:true,
                     remote: {
@@ -152,7 +152,7 @@
                         dataType: "json",
                         data: {
                             name: function () {
-                                return $.trim($("#phonenumber").val());
+                                return $.trim($("#phoneNumber").val());
                             }
                         },
                         dataFilter: function (data, type) {
@@ -169,7 +169,7 @@
         		"email": {
                     remote: "Email已经存在"
                 },
-        		"phonenumber":{
+        		"phoneNumber":{
                 	remote: "手机号码已经存在"
         		}
             },
@@ -185,7 +185,7 @@
         	var userName = $("input[name='userName']").val();
         	var password = $("input[name='password']").val();
         	var email = $("input[name='email']").val();
-        	var phonenumber = $("input[name='phonenumber']").val();
+        	var phoneNumber = $("input[name='phoneNumber']").val();
         	var sex = $("#sex option:selected").val();
         	var status = $("input[name='status']").is(':checked') == true ? 0 : 1;
         	var roleIds = $.form.selectCheckeds("role");
@@ -201,7 +201,7 @@
         			"userName": userName,
         			"password": password,
         			"email": email,
-        			"phonenumber": phonenumber,
+        			"phoneNumber": phoneNumber,
         			"sex": sex,
         			"status": status,
         			"roleIds": roleIds,
