--- a/src/main/resources/templates/system/user/user.html
+++ b/src/main/resources/templates/system/user/user.html
@@ -27,7 +27,7 @@
 			</div>
 		</div>
 	</div>
-	
+
 	<div class="container-div ui-layout-center">
 		<div class="row">
 			<div class="col-sm-12 select-info">
@@ -56,7 +56,7 @@
 					</div>
 				</form>
 			</div>
-			
+
 	        <div class="btn-group hidden-xs" id="toolbar" role="group">
 	        	<a class="btn btn-outline btn-success btn-rounded" onclick="$.operate.add()" shiro:hasPermission="system:user:add">
 	                <i class="fa fa-plus"></i> 新增
@@ -102,7 +102,7 @@
 		            checkbox: true
 		        },
 		        {
-		            field: 'userId',
+		            field: 'id',
 		            title: '用户ID'
 		        },
 		        {
@@ -123,7 +123,7 @@
 		            title: '邮箱'
 		        },
 		        {
-		            field: 'phonenumber',
+		            field: 'phoneNumber',
 		            title: '手机'
 		        },
 		        {
@@ -139,7 +139,7 @@
 		            }
 		        },
 		        {
-		            field: 'createDateTimeStr',
+		            field: 'createTime',
 		            title: '创建时间'
 		        },
 		        {
@@ -147,9 +147,9 @@
 		            align: 'center',
 		            formatter: function(value, row, index) {
 		                var actions = [];
-		                actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="#" onclick="$.operate.edit(\'' + row.userId + '\')"><i class="fa fa-edit"></i>编辑</a> ');
-		                actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="#" onclick="$.operate.remove(\'' + row.userId + '\')"><i class="fa fa-remove"></i>删除</a> ');
-		                actions.push('<a class="btn btn-info btn-xs ' + resetPwdFlag + '" href="#" onclick="resetPwd(\'' + row.userId + '\')"><i class="fa fa-key"></i>重置</a>');
+		                actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="#" onclick="$.operate.edit(' + row.id + ')"><i class="fa fa-edit"></i>编辑</a> ');
+		                actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="#" onclick="$.operate.remove(' + row.id + ')"><i class="fa fa-remove"></i>删除</a> ');
+		                actions.push('<a class="btn btn-info btn-xs ' + resetPwdFlag + '" href="#" onclick="resetPwd(' + row.id + ')"><i class="fa fa-key"></i>重置</a>');
 		                return actions.join('');
 		            }
 		        }]
