--- a/src/main/resources/templates/monitor/operlog/operlog.html
+++ b/src/main/resources/templates/monitor/operlog/operlog.html
@@ -62,7 +62,7 @@
 		            checkbox: true
 		        },
 		        {
-		            field: 'operId',
+		            field: 'id',
 		            title: '日志编号'
 		        },
 		        {
@@ -134,7 +134,7 @@
 		            align: 'center',
 		            formatter: function(value, row, index) {
 		                var actions = [];
-		                actions.push('<a class="btn btn-warning btn-xs ' + detailFlag + '" href="#" onclick="detail(\'' + row.operId + '\')"><i class="fa fa-search"></i>详细</a>');
+		                actions.push('<a class="btn btn-warning btn-xs ' + detailFlag + '" href="#" onclick="detail(\'' + row.id + '\')"><i class="fa fa-search"></i>详细</a>');
 		                return actions.join('');
 		            }
 		        }]
