--- a/src/main/resources/templates/system/config/add.html
+++ b/src/main/resources/templates/system/config/add.html
@@ -27,8 +27,8 @@
 			<label class="col-sm-3 control-label">系统内置：</label>
 			<div class="col-sm-8" th:with="type=${@dictService.selectDictData('sys_yes_no')}">
 				<div th:each="dict : ${type}" th:class="${dict['cssClass']}">
-					<input type="radio" th:id="${dict['dictCode']}" name="configType" th:value="${dict['dictValue']}" th:checked="${dict['isDefault'] == 'Y' ? true : false}">
-					<label th:for="${dict['dictCode']}" th:text="${dict['dictLabel']}"></label>
+					<input type="radio" th:id="${dict['id']}" name="configType" th:value="${dict['dictValue']}" th:checked="${dict['isDefault'] == 'Y' ? true : false}">
+					<label th:for="${dict['id']}" th:text="${dict['dictLabel']}"></label>
 				</div>
 			</div>
 		</div>
