--- a/src/main/resources/templates/system/config/edit.html
+++ b/src/main/resources/templates/system/config/edit.html
@@ -5,7 +5,7 @@
 <body class="white-bg">
     <div class="wrapper wrapper-content animated fadeInRight ibox-content">
         <form class="form-horizontal m" id="form-config-edit" th:object="${config}">
-            <input id="configId" name="configId" th:field="*{configId}"  type="hidden">
+            <input id="id" name="id" th:field="*{id}"  type="hidden">
             <div class="form-group">	
                 <label class="col-sm-3 control-label">参数名称：</label>
                 <div class="col-sm-8">
@@ -28,8 +28,8 @@
 				<label class="col-sm-3 control-label">系统内置：</label>
 				<div class="col-sm-8" th:with="type=${@dictService.selectDictData('sys_yes_no')}">
 					<div th:each="dict : ${type}" th:class="${dict['cssClass']}">
-						<input type="radio" th:id="${dict['dictCode']}" name="configType" th:value="${dict['dictValue']}" th:field="*{configType}">
-						<label th:for="${dict['dictCode']}" th:text="${dict['dictLabel']}"></label>
+						<input type="radio" th:id="${dict['id']}" name="configType" th:value="${dict['dictValue']}" th:field="*{configType}">
+						<label th:for="${dict['id']}" th:text="${dict['dictLabel']}"></label>
 					</div>
 				</div>
 			</div>
@@ -60,8 +60,8 @@
 	                    type: "post",
 	                    dataType: "json",
 	                    data: {
-	                        "configId": function() {
-	                            return $("input[name='configId']").val();
+	                        "id": function() {
+	                            return $("input[name='id']").val();
 	                        },
 	                        "configKey": function() {
 	                            return $("input[name='configKey']").val();
