--- a/src/main/resources/templates/system/dept/add.html
+++ b/src/main/resources/templates/system/dept/add.html
@@ -5,7 +5,7 @@
 <body class="white-bg">
 	<div class="wrapper wrapper-content animated fadeInRight ibox-content">
 		<form class="form-horizontal m" id="form-dept-add">
-			<input id="treeId" name="parentId" type="hidden" th:value="${dept.deptId}"   />
+			<input id="treeId" name="parentId" type="hidden" th:value="${dept.id}"   />
 			<div class="form-group">
 				<label class="col-sm-3 control-label ">上级部门：</label>
 				<div class="col-sm-8">
@@ -100,8 +100,8 @@
 	
 		/*部门管理-新增-选择父部门树*/
 		function selectDeptTree() {
-		    var deptId = $("#treeId").val();
-			var url = prefix + "/selectDeptTree/" + deptId;
+		    var id = $("#treeId").val();
+			var url = prefix + "/selectDeptTree/" + id;
 			$.modal.open("选择部门", url, '380', '380');
 		}
 	</script>
