--- a/src/main/resources/templates/system/dept/edit.html
+++ b/src/main/resources/templates/system/dept/edit.html
@@ -5,7 +5,7 @@
 <body class="white-bg">
 	<div class="wrapper wrapper-content animated fadeInRight ibox-content">
 		<form class="form-horizontal m" id="form-dept-edit" th:object="${dept}">
-			<input name="deptId" type="hidden" th:field="*{deptId}" />
+			<input name="id" type="hidden" th:field="*{id}" />
 			<input id="treeId" name="parentId" type="hidden" th:field="*{parentId}" />
 			<div class="form-group">
 				<label class="col-sm-3 control-label ">上级部门：</label>
@@ -47,8 +47,8 @@
 				<label class="col-sm-3 control-label">部门状态：</label>
 				<div class="col-sm-8" th:with="type=${@dictService.selectDictData('sys_normal_disable')}">
 					<div th:each="dict : ${type}" th:class="${dict['cssClass']}">
-						<input type="radio" th:id="${dict['dictCode']}" name="status" th:value="${dict['dictValue']}" th:field="*{status}">
-						<label th:for="${dict['dictCode']}" th:text="${dict['dictLabel']}"></label>
+						<input type="radio" th:id="${dict['id']}" name="status" th:value="${dict['dictValue']}" th:field="*{status}">
+						<label th:for="${dict['id']}" th:text="${dict['dictLabel']}"></label>
 					</div>
 				</div>
 			</div>
@@ -73,8 +73,8 @@
 		                type: "post",
 		                dataType: "json",
 		                data: {
-		                	"deptId": function() {
-		                        return $("input[name='deptId']").val();
+		                	"id": function() {
+		                        return $("input[name='id']").val();
 		                    },
 		        			"deptName": function() {
 		                        return $("input[name='deptName']").val();
@@ -103,8 +103,8 @@
 	
 		/*部门管理-修改-选择部门树*/
 		function selectDeptTree() {
-			var deptId = $("#treeId").val();
-		    var url = prefix + "/selectDeptTree/" + deptId;
+			var id = $("#treeId").val();
+		    var url = prefix + "/selectDeptTree/" + id;
 		    $.modal.open("选择部门", url, '380', '380');
 		}
 	</script>
