--- a/src/main/resources/templates/system/dict/data/data.html
+++ b/src/main/resources/templates/system/dict/data/data.html
@@ -72,7 +72,7 @@
 						checkbox: true
 					},
 					{
-						field: 'dictCode',
+						field: 'id',
 						title: '字典编码'
 					},
 					{
@@ -104,7 +104,7 @@
 						title: '备注'
 					},
 					{
-						field: 'createDateTimeStr',
+						field: 'createTime',
 						title: '创建时间'
 					},
 					{
@@ -112,8 +112,8 @@
 						align: 'center',
 						formatter: function(value, row, index) {
 							var actions = [];
-							actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="#" onclick="$.operate.edit(\'' + row.dictCode + '\')"><i class="fa fa-edit"></i>编辑</a> ');
-							actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="#" onclick="$.operate.remove(\'' + row.dictCode + '\')"><i class="fa fa-remove"></i>删除</a>');
+							actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="#" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>编辑</a> ');
+							actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="#" onclick="$.operate.remove(\'' + row.id + '\')"><i class="fa fa-remove"></i>删除</a>');
 							return actions.join('');
 						}
 					}]
