--- a/src/main/resources/templates/system/notice/add.html
+++ b/src/main/resources/templates/system/notice/add.html
@@ -32,8 +32,8 @@
 				<label class="col-sm-3 control-label">公告状态：</label>
 				<div class="col-sm-8" th:with="type=${@dictService.selectDictData('sys_notice_status')}">
 					<div th:each="dict : ${type}" th:class="${dict['cssClass']}">
-						<input type="radio" th:id="${dict['dictCode']}" name="status" th:value="${dict['dictValue']}" th:checked="${dict['isDefault'] == 'Y' ? true : false}">
-						<label th:for="${dict['dictCode']}" th:text="${dict['dictLabel']}"></label>
+						<input type="radio" th:id="${dict['id']}" name="status" th:value="${dict['dictValue']}" th:checked="${dict['isDefault'] == 'Y' ? true : false}">
+						<label th:for="${dict['id']}" th:text="${dict['dictLabel']}"></label>
 					</div>
 				</div>
 			</div>
