--- a/src/main/resources/templates/system/notice/edit.html
+++ b/src/main/resources/templates/system/notice/edit.html
@@ -7,7 +7,7 @@
 <body class="white-bg">
     <div class="wrapper wrapper-content animated fadeInRight ibox-content">
         <form class="form-horizontal m" id="form-notice-edit" th:object="${notice}">
-            <input id="noticeId" name="noticeId" th:field="*{noticeId}"  type="hidden">
+            <input id="id" name="id" th:field="*{id}"  type="hidden">
             <div class="form-group">	
                 <label class="col-sm-3 control-label">公告标题：</label>
                 <div class="col-sm-8">
@@ -33,8 +33,8 @@
 				<label class="col-sm-3 control-label">公告状态：</label>
 				<div class="col-sm-8" th:with="type=${@dictService.selectDictData('sys_notice_status')}">
 					<div th:each="dict : ${type}" th:class="${dict['cssClass']}">
-						<input type="radio" th:id="${dict['dictCode']}" name="status" th:value="${dict['dictValue']}" th:field="*{status}">
-						<label th:for="${dict['dictCode']}" th:text="${dict['dictLabel']}"></label>
+						<input type="radio" th:id="${dict['id']}" name="status" th:value="${dict['dictValue']}" th:field="*{status}">
+						<label th:for="${dict['id']}" th:text="${dict['dictLabel']}"></label>
 					</div>
 				</div>
 			</div>
