--- a/src/main/resources/templates/system/post/edit.html
+++ b/src/main/resources/templates/system/post/edit.html
@@ -5,7 +5,7 @@
 <body class="white-bg">
 	<div class="wrapper wrapper-content animated fadeInRight ibox-content">
 		<form class="form-horizontal m" id="form-post-edit" th:object="${post}">
-			<input id="postId" name="postId" type="hidden" th:field="*{postId}"/>
+			<input id="id" name="id" type="hidden" th:field="*{id}"/>
 			<div class="form-group">
 				<label class="col-sm-3 control-label ">岗位编码：</label>
 				<div class="col-sm-8">
@@ -28,8 +28,8 @@
 				<label class="col-sm-3 control-label">岗位状态：</label>
 				<div class="col-sm-8" th:with="type=${@dictService.selectDictData('sys_normal_disable')}">
 					<div th:each="dict : ${type}" th:class="${dict['cssClass']}">
-						<input type="radio" th:id="${dict['dictCode']}" name="status" th:value="${dict['dictValue']}" th:field="*{status}">
-						<label th:for="${dict['dictCode']}" th:text="${dict['dictLabel']}"></label>
+						<input type="radio" th:id="${dict['id']}" name="status" th:value="${dict['dictValue']}" th:field="*{status}">
+						<label th:for="${dict['id']}" th:text="${dict['dictLabel']}"></label>
 					</div>
 				</div>
 			</div>
