添加系统其余功能呢

--- a/src/main/resources/templates/monitor/logininfor/logininfor.html
+++ b/src/main/resources/templates/monitor/logininfor/logininfor.html
@@ -61,7 +61,7 @@
 		            checkbox: true
 		        },
 		        {
-		            field: 'infoId',
+		            field: 'id',
 		            title: '访问编号'
 		        },
 		        {
