--- a/src/main/resources/templates/system/menu/edit.html
+++ b/src/main/resources/templates/system/menu/edit.html
@@ -61,8 +61,8 @@
 				<label class="col-sm-3 control-label">菜单状态：</label>
 				<div class="col-sm-8" th:with="type=${@dictService.selectDictData('sys_show_hide')}">
 					<div th:each="dict : ${type}" th:class="${dict['cssClass']}">
-						<input type="radio" th:id="${dict['dictCode']}" name="visible" th:value="${dict['dictValue']}" th:field="*{visible}">
-						<label th:for="${dict['dictCode']}" th:text="${dict['dictLabel']}"></label>
+						<input type="radio" th:id="${dict['id']}" name="visible" th:value="${dict['dictValue']}" th:field="*{visible}">
+						<label th:for="${dict['id']}" th:text="${dict['dictLabel']}"></label>
 					</div>
 				</div>
 			</div>
