--- a/src/main/resources/templates/system/user/profile/profile.html
+++ b/src/main/resources/templates/system/user/profile/profile.html
@@ -42,11 +42,11 @@
 	                        <div class="col-sm-8">
 	                            <h3><strong>[[${user.loginName}]]</strong></h3>
 	                            <p><i class="fa fa-user"></i> [[${user.userName}]] / [[${#strings.defaultString(roleGroup,'无角色')}]]
-	                            <p><i class="fa fa-phone"></i> [[${user.phonenumber}]]</p>
+	                            <p><i class="fa fa-phone"></i> [[${user.phoneNumber}]]</p>
 	                            <p><i class="fa fa-group"></i> [[${user.dept.deptName}]] / [[${#strings.defaultString(postGroup,'无岗位')}]]</p>
 	                            <p><i class="fa fa-transgender"></i> [[${user.sex}]]</p>
 	                            <p><i class="fa fa-envelope-o"></i> [[${user.email}]]</p>
-	                            <p><i class="fa fa-calendar"></i> [[${user.createTimeStr}]]</p>
+	                            <p><i class="fa fa-calendar"></i> [[${user.createTime}]]</p>
 	                        </div>
 	                        <div class="clearfix"></div>
 	                    </a>
@@ -58,7 +58,7 @@
     
     <div th:include="include::footer"></div>
     <script>
-        var userId = [[${user.userId}]];
+        var userId = [[${user.id}]];
 	    /*用户信息-修改*/
 	    function edit() {
 	        var url = ctx + "system/user/profile/edit/" + userId;
