--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -43,4 +43,5 @@
 	<script th:src="@{/ruoyi/js/ry-ui.min.js?v=2.1.0}"></script>
 
 	<script th:inline="javascript"> var ctx = [[@{/}]]; </script>
+	<script th:inline="javascript"> var imageHome = '/profile/'; </script>
 </div>
