1.添加項目管理

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -15,7 +15,7 @@
 <body class="gray-bg">
     <div class="row  border-bottom white-bg dashboard-header">
         <div class="col-sm-12">
-            <blockquote class="text-warning" style="font-size:14px">蒋小姐店铺
+            <blockquote class="text-warning" style="font-size:14px">农村自建房建筑管理系统
                 <br>biubiubiubiubiubiu.....
                 <h4 class="text-danger">功能介绍</h4>
             </blockquote>
@@ -33,9 +33,9 @@
 
                     </div>
                     <div class="ibox-content">
-                        <p><i class="fa fa-qq"></i> QQ：96569845</a>
+                        <p><i class="fa fa-qq"></i> QQ：1782757626</a>
                         </p>
-                        <p><i class="fa fa-weixin"></i> 微信：<a href="javascript:;">/ Somedargon</a>
+                        <p><i class="fa fa-weixin"></i> 微信：<a href="javascript:;">/ </a>
                         </p>
                     </div>
                 </div>
@@ -57,7 +57,7 @@
                                     <div id="v00" class="panel-collapse collapse">
                                         <div class="panel-body">
                                             <ol>
-                                                <li>蒋小姐管理系统正式发布。</li>
+                                                <li>农村自建房建筑管理系统正式发布。</li>
                                             </ol>
                                         </div>
                                     </div>
