--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <link rel="icon" type="image/png" th:href="@{/images/favicon.png}">
     <link rel="stylesheet" th:href="@{/css/index.css}">
-    <title>蒋小姐 / 个人主页</title>
+    <title>农村自建房建筑管理系统</title>
 </head>
 <body>
 <svg id="clip-paths" width="0" height="0" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g></g></svg>
@@ -22,7 +22,7 @@
                     </g>
                 </svg>
             </div>
-            <h1>蒋小姐</h1>
+            <h1></h1>
             <p>ziyang, China</p>
             <div id="contact">
                 <a href="https://twitter.com/biezhii" id="twitter" target="_blank">
