--- a/src/main/resources/templates/building/qualityInspect/add.html
+++ b/src/main/resources/templates/building/qualityInspect/add.html
@@ -13,86 +13,35 @@
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="col-sm-3 control-label"><span style="color:red;">*</span>项目简称：</label>
+				<label class="col-sm-3 control-label"><span style="color:red;">*</span>检查性质：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text"  id="productAbbreviation" name="productAbbreviation" />
+					<input class="form-control" type="text"  id="inspectType" name="inspectType" />
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="col-sm-3 control-label">项目编号：</label>
-				<div class="col-sm-3">
-					<input class="form-control" type="text" name="productNumber" id="productNumber">
-				</div>
-				<label class="col-sm-2 control-label">项目性质：</label>
-				<div class="col-sm-3">
-					<input id="productType" name="productType" class="form-control" type="text">
+				<label class="col-sm-3 control-label">检查人：</label>
+				<div class="col-sm-8">
+					<input class="form-control" type="text" name="inspectName">
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="col-sm-3 control-label">开工日期：</label>
+				<label class="col-sm-3 control-label">检查时间：</label>
 				<div class="input-group date col-sm-8">
 					<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
 					<input type="text" class="form-control" value="2018-04-20" >
 				</div>
-				<input type="hidden" id="startTime" name="startTime" value="" /><br/>
-
+				<input type="hidden" id="inspectDate" name="inspectDate" value="" /><br/>
 			</div>
 			<div class="form-group">
-				<label class="col-sm-3 control-label">竣工日期：</label>
-				<div class="input-group date col-sm-8">
-					<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-					<input type="text" class="form-control" n value="2018-04-20" >
-				</div>
-				<input type="hidden" id="endTime" name="endTime" value="" /><br/>
-			</div>
-			<div class="form-group">
-				<label class="col-sm-3 control-label">工程标签：</label>
+				<label class="col-sm-3 control-label">项目编号：</label>
 				<div class="col-sm-8">
-					<input id="productLabel" name="productLabel" class="form-control" type="text">
+					<input class="form-control" type="text" name="productId">
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="col-sm-3 control-label">项目造价（万元）：</label>
+				<label class="col-sm-3 control-label">检查结果：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" name="productMoney">
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-sm-3 control-label">项目面积（㎡）：</label>
-				<div class="col-sm-8">
-					<input class="form-control" type="text" name="productArea">
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-sm-3 control-label">项目长度（m）：</label>
-				<div class="col-sm-8">
-					<input class="form-control" type="text" name="productLength">
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-sm-3 control-label">施工单位：</label>
-					<div data-toggle="distpicker">
-						<select name="province" data-province="浙江省"></select>
-						<select name="city" data-city="杭州市"></select>
-						<select name="area\\[ir" data-district="西湖区"></select>
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-sm-3 control-label">具体位置：</label>
-				<div class="col-sm-8">
-					<input class="form-control" type="text" name="address">
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-sm-3 control-label">备注：</label>
-				<div class="col-sm-8">
-					<input class="form-control" type="text" name="remark">
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-sm-3 control-label">项目成员：</label>
-				<div class="col-sm-8">
-					<input class="form-control" type="text" name="userIds">
+					<input class="form-control" type="text" name="productResult">
 				</div>
 			</div>
 			<div class="form-group">
