--- a/src/main/resources/templates/building/teamManager/add.html
+++ b/src/main/resources/templates/building/teamManager/add.html
@@ -52,7 +52,7 @@
 	<script th:src="@{/ajax/libs/jquery-distpicker/main.js}"></script>
 
 	 <script>
-        var prefix = ctx + "building/teamManger"
+        var prefix = ctx + "building/teamManager"
 		$(".input-group.date").datepicker({todayBtn: "linked",keyboardNavigation: !1,forceParse: !1,calendarWeeks: !0,autoclose: !0});
 
 		$("#form-menu-add").validate({
