--- a/src/main/resources/templates/building/procurement/edit.html
+++ b/src/main/resources/templates/building/procurement/edit.html
@@ -5,48 +5,43 @@
 <link href="/ajax/libs/iCheck/custom.css" th:href="@{/ajax/libs/iCheck/custom.css}" rel="stylesheet"/>
 <body class="white-bg">
 	<div class="wrapper wrapper-content animated fadeInRight ibox-content">
-		<form class="form-horizontal m" id="form-menu-add">
+		<form class="form-horizontal m" id="form-menu-add" th:object="${procurementManager}">
+		<input name="id" type="hidden" th:field="*{id}" />
 			<div class="form-group">
-				<label class="col-sm-3 control-label "><span style="color:red;">*</span> 项目名称：</label>
+				<label class="col-sm-3 control-label "><span style="color:red;">*</span> 采购人：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text"  id="productName" name="productName"/>
+					<input class="form-control" type="text"  id="procurementName" name="procurementName" th:field="*{procurementName}"/>
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="col-sm-3 control-label"><span style="color:red;">*</span>项目编号：</label>
+				<label class="col-sm-3 control-label"><span style="color:red;">*</span>材料名称：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text"  id="productId" name="productId" />
+					<input class="form-control" type="text"  id="materialsName" name="materialsName" th:field="*{materialsName}"/>
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="col-sm-3 control-label">任务描述：</label>
+				<label class="col-sm-3 control-label">单位：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" name="taskDescription">
+					<input class="form-control" type="text" name="unit" th:field="*{unit}">
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="col-sm-3 control-label">完成时间：</label>
+				<label class="col-sm-3 control-label">采购日期：</label>
 				<div class="input-group date col-sm-8">
 					<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-					<input type="text" class="form-control" name="finishDate" value="2018-04-20" >
+					<input type="text" class="form-control" name="procurementDate" value="2018-04-20" >
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="col-sm-3 control-label">工作量：</label>
+				<label class="col-sm-3 control-label">数量：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" name="workload">
+					<input class="form-control" type="text" name="num" th:field="*{num}">
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="col-sm-3 control-label">房屋住址：</label>
+				<label class="col-sm-3 control-label">单价：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" name="houseAddress">
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-sm-3 control-label">电话号码：</label>
-				<div class="col-sm-8">
-					<input class="form-control" type="text" name="phone">
+					<input class="form-control" type="text" name="unitPrice" th:field="*{unitPrice}">
 				</div>
 			</div>
 			<div class="form-group">
@@ -65,7 +60,7 @@
 	<script th:src="@{/ajax/libs/jquery-distpicker/main.js}"></script>
 
 	 <script>
-        var prefix = ctx + "building/taskManager"
+        var prefix = ctx + "building/procurement"
 		$(".input-group.date").datepicker({todayBtn: "linked",keyboardNavigation: !1,forceParse: !1,calendarWeeks: !0,autoclose: !0});
 
 		$("#form-menu-add").validate({
