--- a/src/main/resources/templates/building/taskManager/edit.html
+++ b/src/main/resources/templates/building/taskManager/edit.html
@@ -5,48 +5,50 @@
 <link href="/ajax/libs/iCheck/custom.css" th:href="@{/ajax/libs/iCheck/custom.css}" rel="stylesheet"/>
 <body class="white-bg">
 	<div class="wrapper wrapper-content animated fadeInRight ibox-content">
-		<form class="form-horizontal m" id="form-menu-add">
+		<form class="form-horizontal m" id="form-menu-add" th:object="${taskManager}">
+			<input name="id" type="hidden" th:field="*{id}" />
 			<div class="form-group">
 				<label class="col-sm-3 control-label "><span style="color:red;">*</span> 项目名称：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text"  id="productName" name="productName"/>
+					<input class="form-control" type="text"  id="productName" name="productName" th:field="*{productName}"/>
 				</div>
 			</div>
 			<div class="form-group">
 				<label class="col-sm-3 control-label"><span style="color:red;">*</span>项目编号：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text"  id="productId" name="productId" />
+					<input class="form-control" type="text"  id="productId" name="productId" th:field="*{productId}"/>
 				</div>
 			</div>
 			<div class="form-group">
 				<label class="col-sm-3 control-label">任务描述：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" name="taskDescription">
+					<input class="form-control" type="text" name="taskDescription" th:field="*{taskDescription}">
 				</div>
 			</div>
 			<div class="form-group">
 				<label class="col-sm-3 control-label">完成时间：</label>
 				<div class="input-group date col-sm-8">
 					<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-					<input type="text" class="form-control" name="finishDate" value="2018-04-20" >
+					<input type="text" class="form-control" value="2018-04-20" >
 				</div>
+				<input type="hidden" id="finishDate" name="finishDate"  /><br/>
 			</div>
 			<div class="form-group">
 				<label class="col-sm-3 control-label">工作量：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" name="workload">
+					<input class="form-control" type="text" name="workload" th:field="*{workload}">
 				</div>
 			</div>
 			<div class="form-group">
 				<label class="col-sm-3 control-label">房屋住址：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" name="houseAddress">
+					<input class="form-control" type="text" name="houseAddress" th:field="*{houseAddress}">
 				</div>
 			</div>
 			<div class="form-group">
 				<label class="col-sm-3 control-label">电话号码：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" name="phone">
+					<input class="form-control" type="text" name="phone" th:field="*{phone}">
 				</div>
 			</div>
 			<div class="form-group">
