--- a/src/main/resources/templates/building/teamManager/teamManager.html
+++ b/src/main/resources/templates/building/teamManager/teamManager.html
@@ -66,9 +66,9 @@
 			updateUrl: prefix + "/edit/{id}",
 			removeUrl: prefix + "/remove",
 			exportUrl: prefix + "/export",
-			sortName: "createTime",
+			sortName: "create_time",
 			sortOrder: "desc",
-			modalName: "用户",
+			modalName: "团队人员",
 			search: false,
 			showExport: false,
 			columns: [{
@@ -103,8 +103,8 @@
 					align: 'center',
 					formatter: function (value, row, index) {
 						var actions = [];
-						actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="#" onclick="$.operate.edit(' + row.id + ')"><i class="fa fa-edit"></i>编辑</a> ');
-						actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="#" onclick="$.operate.remove(' + row.id + ')"><i class="fa fa-remove"></i>删除</a> ');
+						actions.push('<a class="btn btn-success btn-xs " href="#" onclick="$.operate.edit(' + row.id + ')"><i class="fa fa-edit"></i>编辑</a> ');
+						actions.push('<a class="btn btn-danger btn-xs " href="#" onclick="$.operate.remove(' + row.id + ')"><i class="fa fa-remove"></i>删除</a> ');
 						return actions.join('');
 					}
 				}]
