2.添加安全管理管理

--- a/src/main/resources/templates/building/product/product.html
+++ b/src/main/resources/templates/building/product/product.html
@@ -18,10 +18,10 @@
 				<div class="select-list gd">
 					<ul>
 						<li>
-							采购人：<input type="text" name="procurementName"/>
+							项目名：<input type="text" name="productName"/>
 						</li>
 						<li>
-							材料名称：<input type="text" name="materialsName"/>
+							项目编号：<input type="text" name="productNumber"/>
 						</li>
 						<li>
 							<a class="btn btn-primary btn-rounded btn-sm"
