--- a/src/main/resources/templates/building/taskManager/taskManager.html
+++ b/src/main/resources/templates/building/taskManager/taskManager.html
@@ -18,10 +18,7 @@
 				<div class="select-list gd">
 					<ul>
 						<li>
-							项目名称：<input type="text" name="id"/>
-						</li>
-						<li>
-							项目ID：<input type="text" name="productId"/>
+							项目名称：<input type="text" name="productName"/>
 						</li>
 						<li>
 							<a class="btn btn-primary btn-rounded btn-sm"
