--- a/src/main/resources/templates/building/workLog/workLog.html
+++ b/src/main/resources/templates/building/workLog/workLog.html
@@ -18,10 +18,7 @@
 				<div class="select-list gd">
 					<ul>
 						<li>
-							项目名称：<input type="text" name="loginName"/>
-						</li>
-						<li>
-							施工合同编号：<input type="text" name="productNumber"/>
+							项目名称：<input type="text" name="workRecord"/>
 						</li>
 						<li>
 							<a class="btn btn-primary btn-rounded btn-sm"
@@ -79,16 +76,16 @@
                     title: '项目ID'
                 },
                 {
-                    field: 'productName',
-                    title: '项目名称',
+                    field: 'machineList',
+                    title: '设备',
                 },
                 {
-                    field: 'labor',
-                    title: '人工'
+                    field: 'technicalWorkRecord',
+                    title: '技术质量安全工作'
                 },
                 {
-                    field: 'totalAmount',
-                    title: '总价'
+                    field: 'workRecord',
+                    title: '项目'
                 },
                 {
                     field: 'materialScience',
@@ -97,10 +94,6 @@
                 {
                     field: 'workTime',
                     title: '时间'
-                },
-                {
-                    field: 'createTime',
-                    title: '创建时间'
                 },
                 {
                     title: '操作',
