--- a/src/main/resources/templates/building/qualityInspect/qualityInspect.html
+++ b/src/main/resources/templates/building/qualityInspect/qualityInspect.html
@@ -18,10 +18,7 @@
 				<div class="select-list gd">
 					<ul>
 						<li>
-							项目名称：<input type="text" name="id"/>
-						</li>
-						<li>
-							项目ID：<input type="text" name="productNumber"/>
+							项目名称：<input type="text" name="productName"/>
 						</li>
 						<li>
 							<a class="btn btn-primary btn-rounded btn-sm"
@@ -33,12 +30,10 @@
 		</div>
 
 		<div class="btn-group hidden-xs" id="toolbar" role="group">
-			<a class="btn btn-outline btn-success btn-rounded" onclick="$.operate.add()"
-			   shiro:hasPermission="building:product:add">
+			<a class="btn btn-outline btn-success btn-rounded" onclick="$.operate.add()">
 				<i class="fa fa-plus"></i> 新增
 			</a>
-			<a class="btn btn-outline btn-danger btn-rounded" onclick="$.operate.batRemove()"
-			   shiro:hasPermission="building:product:remove">
+			<a class="btn btn-outline btn-danger btn-rounded" onclick="$.operate.batRemove()">
 				<i class="fa fa-trash-o"></i> 删除
 			</a>
 		</div>
@@ -107,8 +102,8 @@
 					align: 'center',
 					formatter: function (value, row, index) {
 						var actions = [];
-						actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="#" onclick="$.operate.edit(' + row.id + ')"><i class="fa fa-edit"></i>编辑</a> ');
-						actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="#" onclick="$.operate.remove(' + row.id + ')"><i class="fa fa-remove"></i>删除</a> ');
+						actions.push('<a class="btn btn-success btn-xs " href="#" onclick="$.operate.edit(' + row.id + ')"><i class="fa fa-edit"></i>编辑</a> ');
+						actions.push('<a class="btn btn-danger btn-xs " href="#" onclick="$.operate.remove(' + row.id + ')"><i class="fa fa-remove"></i>删除</a> ');
 						return actions.join('');
 					}
 				}]
