--- a/src/main/resources/templates/building/security/edit.html
+++ b/src/main/resources/templates/building/security/edit.html
@@ -5,18 +5,19 @@
 <link href="/ajax/libs/iCheck/custom.css" th:href="@{/ajax/libs/iCheck/custom.css}" rel="stylesheet"/>
 <body class="white-bg">
 	<div class="wrapper wrapper-content animated fadeInRight ibox-content">
-		<form class="form-horizontal m" id="form-menu-add">
+		<form class="form-horizontal m" id="form-menu-add" th:object="${productSecurity}">
+			<input name="id" type="hidden" th:field="*{id}" />
 			<div class="form-group">
 				<label class="col-sm-3 control-label "><span style="color:red;">*</span> 项目编号：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text"  id="serialNo" name="serialNo"/>
+					<input class="form-control" type="text"  id="serialNo" name="serialNo" th:field="*{serialNo}"/>
 				</div>
 			</div>
 			<div class="form-group">
 				<label class="col-sm-3 control-label">计划开始日期：</label>
 				<div class="input-group date col-sm-8">
 					<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-					<input type="text" class="form-control" value="2018-04-20" ame="beginDate">
+					<input type="text" class="form-control" value="2018-04-20" name="beginDate">
 				</div>
 
 			</div>
@@ -26,39 +27,40 @@
 					<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
 					<input type="text" class="form-control" value="2019-04-20" name="workTime" >
 				</div>
+
 			</div>
 			<div class="form-group">
 				<label class="col-sm-3 control-label"><span style="color:red;">*</span>计划名称：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text"  id="planName" name="planName" />
+					<input class="form-control" type="text"  id="planName" name="planName" th:field="*{planName}"/>
 				</div>
 			</div>
 			<div class="form-group">
 				<label class="col-sm-3 control-label">项目检查：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" name="projectObservation" id="projectObservation">
-				</div>
 
+					<input class="form-control" type="text" name="projectObservation" id="projectObservation" th:field="*{projectObservation}">
+				</div>
 			</div>
 			<div class="form-group">
 				<label class="col-sm-3 control-label">工期：</label>
 				<div class="col-sm-8">
 					<div class="input-group date col-sm-8">
 						<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-						<input type="text" class="form-control" value="2019-04-20" name="timeLimit" >
+						<input type="text" class="form-control" value="2019-04-20" name="timeLimit" th:field="*{timeLimit}">
 					</div>
 				</div>
 			</div>
 			<div class="form-group">
 				<label class="col-sm-3 control-label">检查性质：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" name="securityType" id="securityType">
+					<input class="form-control" type="text" name="securityType" id="securityType" th:field="*{securityType}">
 				</div>
 			</div>
 			<div class="form-group">
 				<label class="col-sm-3 control-label">检查结果：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" name="rectificationStatus" id="rectificationStatus">
+					<input class="form-control" type="text" name="rectificationStatus" id="rectificationStatus" th:field="*{rectificationStatus}">
 				</div>
 			</div>
 			<div class="form-group">
