--- a/src/main/resources/templates/building/security/security.html
+++ b/src/main/resources/templates/building/security/security.html
@@ -18,10 +18,7 @@
 				<div class="select-list gd">
 					<ul>
 						<li>
-							项目名称：<input type="text" name="loginName"/>
-						</li>
-						<li>
-							施工合同编号：<input type="text" name="productNumber"/>
+							计划名称：<input type="text" name="planName"/>
 						</li>
 						<li>
 							<a class="btn btn-primary btn-rounded btn-sm"
@@ -33,12 +30,10 @@
 		</div>
 
 		<div class="btn-group hidden-xs" id="toolbar" role="group">
-			<a class="btn btn-outline btn-success btn-rounded" onclick="$.operate.add()"
-			>
+			<a class="btn btn-outline btn-success btn-rounded" onclick="$.operate.add()">
 				<i class="fa fa-plus"></i> 新增
 			</a>
-			<a class="btn btn-outline btn-danger btn-rounded" onclick="$.operate.batRemove()"
-			>
+			<a class="btn btn-outline btn-danger btn-rounded" onclick="$.operate.batRemove()">
 				<i class="fa fa-trash-o"></i> 删除
 			</a>
 		</div>
@@ -53,8 +48,6 @@
 <script th:src="@{/ajax/libs/jquery-ztree/3.5/js/jquery.ztree.all-3.5.js}"></script>
 <script th:inline="javascript">
     var prefix = ctx + "building/security";
-    var editFlag = [[${@permissionService.hasPermi('building:product:edit')}]];
-    var removeFlag = [[${@permissionService.hasPermi('building:product:remove')}]];
     $(document).ready(function () {
         $('body').layout({west__size: 185});
         queryUserList();
@@ -68,7 +61,7 @@
             removeUrl: prefix + "/remove",
             exportUrl: prefix + "/export",
             sortOrder: "desc",
-            modalName: "用户",
+            modalName: "安全",
             search: false,
             showExport: false,
             columns: [{
@@ -107,8 +100,8 @@
                     align: 'center',
                     formatter: function (value, row, index) {
                         var actions = [];
-                        actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="#" onclick="$.operate.edit(' + row.id + ')"><i class="fa fa-edit"></i>编辑</a> ');
-                        actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="#" onclick="$.operate.remove(' + row.id + ')"><i class="fa fa-remove"></i>删除</a> ');
+                        actions.push('<a class="btn btn-success btn-xs " href="#" onclick="$.operate.edit(' + row.id + ')"><i class="fa fa-edit"></i>编辑</a> ');
+                        actions.push('<a class="btn btn-danger btn-xs " href="#" onclick="$.operate.remove(' + row.id + ')"><i class="fa fa-remove"></i>删除</a> ');
                         return actions.join('');
                     }
                 }]
