--- a/src/main/resources/templates/building/stock/edit.html
+++ b/src/main/resources/templates/building/stock/edit.html
@@ -5,17 +5,18 @@
 <link href="/ajax/libs/iCheck/custom.css" th:href="@{/ajax/libs/iCheck/custom.css}" rel="stylesheet"/>
 <body class="white-bg">
 	<div class="wrapper wrapper-content animated fadeInRight ibox-content">
-		<form class="form-horizontal m" id="form-menu-add">
+		<form class="form-horizontal m" id="form-menu-add" th:object="${stock}">
+			<input name="id" type="hidden" th:field="*{id}" />
 			<div class="form-group">
 				<label class="col-sm-3 control-label"><span style="color:red;">*</span>材料名称：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text"  id="materialsName" name="materialsName" />
+					<input class="form-control" type="text"  id="materialsName" name="materialsName" th:field="*{materialsName}"/>
 				</div>
 			</div>
 			<div class="form-group">
 				<label class="col-sm-3 control-label">单位：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" name="unit">
+					<input class="form-control" type="text" name="unit" th:field="*{unit}">
 				</div>
 			</div>
 			<div class="form-group">
@@ -28,13 +29,13 @@
 			<div class="form-group">
 				<label class="col-sm-3 control-label">数量：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" name="num">
+					<input class="form-control" type="text" name="num" th:field="*{num}">
 				</div>
 			</div>
 			<div class="form-group">
 				<label class="col-sm-3 control-label">单价：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" name="unitPrice">
+					<input class="form-control" type="text" name="unitPrice" th:field="*{unitPrice}">
 				</div>
 			</div>
 			<div class="form-group">
