--- a/src/main/resources/templates/building/stock/stock.html
+++ b/src/main/resources/templates/building/stock/stock.html
@@ -49,7 +49,7 @@
 <script th:src="@{/ajax/libs/jquery-layout/jquery.layout-latest.js}"></script>
 <script th:src="@{/ajax/libs/jquery-ztree/3.5/js/jquery.ztree.all-3.5.js}"></script>
 <script th:inline="javascript">
-	var prefix = ctx + "building/procurement"
+	var prefix = ctx + "building/stock"
 
 	$(document).ready(function () {
 		$('body').layout({west__size: 185});
@@ -80,10 +80,6 @@
 					title: '采购日期'
 				},
 				{
-					field: 'unit',
-					title: '工作量'
-				},
-				{
 					field: 'num',
 					title: '数量'
 				},
@@ -96,8 +92,8 @@
 					align: 'center',
 					formatter: function (value, row, index) {
 						var actions = [];
-						actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="#" onclick="$.operate.edit(' + row.id + ')"><i class="fa fa-edit"></i>编辑</a> ');
-						actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="#" onclick="$.operate.remove(' + row.id + ')"><i class="fa fa-remove"></i>删除</a> ');
+						actions.push('<a class="btn btn-success btn-xs " href="#" onclick="$.operate.edit(' + row.id + ')"><i class="fa fa-edit"></i>编辑</a> ');
+						actions.push('<a class="btn btn-danger btn-xs " href="#" onclick="$.operate.remove(' + row.id + ')"><i class="fa fa-remove"></i>删除</a> ');
 						return actions.join('');
 					}
 				}]
