--- a/src/main/resources/templates/building/workLog/edit.html
+++ b/src/main/resources/templates/building/workLog/edit.html
@@ -5,37 +5,48 @@
 <link href="/ajax/libs/iCheck/custom.css" th:href="@{/ajax/libs/iCheck/custom.css}" rel="stylesheet"/>
 <body class="white-bg">
 	<div class="wrapper wrapper-content animated fadeInRight ibox-content">
-		<form class="form-horizontal m" id="form-menu-add">
+		<form class="form-horizontal m" id="form-menu-add" th:object="${projectWorkLog}">
 			<div class="form-group">
-				<label class="col-sm-3 control-label"><span style="color:red;">*</span>材料名称：</label>
+				<label class="col-sm-3 control-label ">项目名称：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text"  id="materialsName" name="materialsName" />
+					<input class="form-control" type="text"  id="workRecord" name="workRecord" th:field="*{workRecord}"/>
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="col-sm-3 control-label">单位：</label>
+				<label class="col-sm-3 control-label">总价：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" name="unit">
+					<input class="form-control" type="text"  id="totalAmount" name="totalAmount" th:field="*{totalAmount}"/>
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="col-sm-3 control-label">采购日期：</label>
+				<label class="col-sm-3 control-label">材料：</label>
+				<div class="col-sm-8">
+					<input class="form-control" type="text"  id="materialScience" name="materialScience" th:field="*{materialScience}"/>
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="col-sm-3 control-label">人工：</label>
+				<div class="col-sm-8">
+					<input class="form-control" type="text"  id="labor" name="labor" th:field="*{labor}"/>
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="col-sm-3 control-label">设备：</label>
+				<div class="col-sm-3">
+					<input class="form-control" type="text" name="machineList" id="machineList" th:field="*{machineList}">
+				</div>
+				<label class="col-sm-2 control-label">技术质量安全工作：</label>
+				<div class="col-sm-3">
+					<input id="technicalWorkRecord" name="technicalWorkRecord" class="form-control" type="text" th:field="*{technicalWorkRecord}">
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="col-sm-3 control-label">检查时间：</label>
 				<div class="input-group date col-sm-8">
 					<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-					<input type="text" name="procurementDate" class="form-control" value="2018-04-20" >
+					<input type="text" class="form-control" value="2018-04-20"  name="workTime">
 				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-sm-3 control-label">数量：</label>
-				<div class="col-sm-8">
-					<input class="form-control" type="text" name="num">
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-sm-3 control-label">单价：</label>
-				<div class="col-sm-8">
-					<input class="form-control" type="text" name="unitPrice">
-				</div>
+
 			</div>
 			<div class="form-group">
 				<div class="form-control-static col-sm-offset-9">
@@ -53,7 +64,7 @@
 	<script th:src="@{/ajax/libs/jquery-distpicker/main.js}"></script>
 
 	 <script>
-        var prefix = ctx + "building/stock"
+        var prefix = ctx + "building/workLog"
 		$(".input-group.date").datepicker({todayBtn: "linked",keyboardNavigation: !1,forceParse: !1,calendarWeeks: !0,autoclose: !0});
 
 		$("#form-menu-add").validate({
