--- a/src/main/resources/templates/system/user/profile/profile.html
+++ b/src/main/resources/templates/system/user/profile/profile.html
@@ -58,7 +58,7 @@
     
     <div th:include="include::footer"></div>
     <script>
-        var userId = [[${user.userId}]];
+        var userId = [[${user.id}]];
 
         /*用户信息-修改*/
         function edit() {
