--- a/src/main/resources/templates/system/user/edit.html
+++ b/src/main/resources/templates/system/user/edit.html
@@ -105,7 +105,7 @@
                         dataType: "json",
                         data: {
                         	"id": function() {
-                                return $("input[name='id']").val();
+                                return $("input[name='userId']").val();
                             },
                 			"email": function() {
                                 return $("input[name='email']").val();
@@ -126,7 +126,7 @@
                         dataType: "json",
                         data: {
                         	"id": function() {
-                                return $("input[name='id']").val();
+                                return $("input[name='userId']").val();
                             },
                 			"phoneNumber": function() {
                                 return $("input[name='phoneNumber']").val();
