--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -33,7 +33,6 @@
                     </div>
                     <div class="m-b"></div>
                     <h4>欢迎使用 <strong>后台管理系统</strong></h4>
-                    <strong>还没有账号？ <a href="#">立即注册&raquo;</a></strong>
                 </div>
             </div>
             <div class="col-sm-5">
@@ -52,7 +51,7 @@
 							</a>
 						</div>
 					</div>
-                    <input class="i-checks" type="checkbox" name="rememberme" />&nbsp;&nbsp;记住我
+                    <!--<input class="i-checks" type="checkbox" name="rememberme" />&nbsp;&nbsp;记住我-->
                     <button class="btn btn-success btn-block" id="btnSubmit" data-loading="正在验证登录，请稍后...">登录</button>
                 </form>
             </div>
